--- a/0x02-i18n/templates/5-index.html
+++ b/0x02-i18n/templates/5-index.html
@@ -1,7 +1,7 @@
 <title>{{ _('home_title') }}</title>
 <h1>{{ _('home_header') }}</h1>
-{% if get_user()%}
-    <p>{{_('logged_in_as')}}</p>
+{% if g.user %}
+    <p>{{_('logged_in_as', username=g.user.name)}}</p>
 {%else%}
     <p>{{_('not_logged_in')}}</p>
 {%endif%}
